--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "dexie": "^4.2.1",
     "mui": "^0.0.1",
     "next": "16.0.10",
     "react": "19.2.1",
